DuPont DevSB/src/objects/SiteObjectItem__c.object
<CustomObject>
    <description>Shows the relationship between SiteObjects and the ability to override the name and description based on language</description>
    <fields>
        <fullName>ChildSiteObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related List</label>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DescriptionOverride__c</fullName>
        <label>Description Override</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormField__c</fullName>
        <description>Form Field to use</description>
        <label>Form Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead.Salutation</fullName>
                </value>
                <value>
                    <fullName>Lead.FirstName</fullName>
                </value>
                <value>
                    <fullName>Lead.LastName</fullName>
                </value>
                <value>
                    <fullName>Lead.Email</fullName>
                </value>
                <value>
                    <fullName>Lead.Phone</fullName>
                </value>
                <value>
                    <fullName>Lead.Company</fullName>
                </value>
                <value>
                    <fullName>Lead.Lead_Country__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Country__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role1__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role2__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role3__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role4__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role5__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role6__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role7__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role8__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role9__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.Role10__c</fullName>
                </value>
                <value>
                    <fullName>SiteField__c.PrivacyInquiryType__c</fullName>
                </value>
                <value>
                    <fullName>Lead.Street</fullName>
                </value>
                <value>
                    <fullName>Lead.State</fullName>
                </value>
                <value>
                    <fullName>Lead.City</fullName>
                </value>
                <value>
                    <fullName>Lead.PostalCode</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>nl</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>bg</fullName>
                </value>
                <value>
                    <fullName>zh</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>dk</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>tr</fullName>
                </value>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameOverride__c</fullName>
        <label>Name Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteObject__c</fullName>
        <label>Site Object</label>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site Object Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteObjectItems</pluralLabel>
    <recordTypes>
        <fullName>CenterItem</fullName>
        <active>true</active>
        <label>Center Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>FormField</fullName>
        <active>true</active>
        <label>Form Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>TranslationItem</fullName>
        <active>true</active>
        <label>Translation Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>